--- a/index.html
+++ b/index.html
@@ -155,9 +155,7 @@
     </div>
   </div>
 
-  <script>
-   const N8N_WEBHOOK_URL = "https://curso-n8n-n8n.sjia2i.easypanel.host/webhook/alrd-intake";
-
+  <script>https://curso-n8n-n8n.sjia2i.easypanel.host/webhook/alrd-intake
 
     const form = document.getElementById("legalForm");
     const btn = document.getElementById("btnEnviar");
@@ -217,4 +215,5 @@
   </script>
 </body>
 </html>
+
 
